--- a/api/serverless.yml
+++ b/api/serverless.yml
@@ -25,6 +25,8 @@ provider:
       Resource: "*"
   environment:
     FEEDBACK_TABLE_NAME: ${self:custom.feedbackTableName}
+    SIGNING_KEY: ${file(secrets.json):SIGNING_KEY}
+    GITHUB_APP_ID: ${file(secrets.json):GITHUB_APP_ID}
 functions:
   ping:
     handler: handler.ping
