--- a/api/package.json
+++ b/api/package.json
@@ -9,7 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.18.0",
-    "jsonwebtoken": "^8.3.0"
+    "jsonwebtoken": "^8.3.0",
+    "request": "^2.88.0",
+    "request-promise-native": "^1.0.5"
   }
 }
