--- a/api/serverless.yml
+++ b/api/serverless.yml
@@ -25,8 +25,9 @@ provider:
       Resource: "*"
   environment:
     FEEDBACK_TABLE_NAME: ${self:custom.feedbackTableName}
-    SIGNING_KEY: ${file(secrets.yml):SIGNING_KEY}
-    GITHUB_APP_ID: ${file(secrets.yml):GITHUB_APP_ID}
+    SIGNING_KEY: ${file(secrets_test-fullstory.yml):SIGNING_KEY}
+    GITHUB_APP_ID: ${file(secrets_test-fullstory.yml):GITHUB_APP_ID}
+    INSTALLATION_ID: ${file(secrets_test-fullstory.yml):INSTALLATION_ID}
 functions:
   ping:
     handler: handler.ping
