--- a/api/serverless.yml
+++ b/api/serverless.yml
@@ -7,6 +7,7 @@ provider:
   runtime: nodejs8.10
   stage: ${opt:stage, 'v1'}
   region: us-east-1
+  profile: personal-account-admin
   iamRoleStatements:
     - Effect: Allow
       Action:
